feat(properties): add a general property for the fakeson version on the submodules

--- a/fakeson-source/fakeson-source-application/pom.xml
+++ b/fakeson-source/fakeson-source-application/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>xyz.zalaya</groupId>
         <artifactId>fakeson-source</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${fakeson.version}</version>
     </parent>
 
     <artifactId>fakeson-source-application</artifactId>
