--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     </properties>
 
     <modules>
+        <module>fakeson-properties</module>
         <module>fakeson-scripts</module>
         <module>fakeson-source</module>
         <module>fakeson-docker</module>
