fix(properties): delete the service and add some properties to the property list in the parent pom

--- a/fakeson-source/pom.xml
+++ b/fakeson-source/pom.xml
@@ -22,58 +22,11 @@
         <module>fakeson-source-infrastructure</module>
     </modules>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.7.0</version>
-                <executions>
-                    <execution>
-                        <id>copy-properties</id>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>unpack-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <includeArtifactIds>fakeson-properties</includeArtifactIds>
-                            <outputDirectory>${project.build.directory}/properties</outputDirectory>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>properties-maven-plugin</artifactId>
-                <version>1.2.1</version>
-                <executions>
-                    <execution>
-                        <phase>initialize</phase>
-                        <goals>
-                            <goal>read-project-properties</goal>
-                        </goals>
-                        <configuration>
-                            <files>
-                                <file>${project.build.directory}/properties/application.properties</file>
-                            </files>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <optional>true</optional>
-            <version>1.18.32</version>
-        </dependency>
-        <dependency>
-            <groupId>xyz.zalaya</groupId>
-            <artifactId>fakeson-properties</artifactId>
-            <version>${fakeson.version}</version>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 </project>
