feat(application): add the service for the product in the application layer

--- a/fakeson-source/fakeson-source-products/fakeson-source-products-application/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-application/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>fakeson-source-products-infrastructure</artifactId>
             <version>${fakeson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>xyz.zalaya</groupId>
+            <artifactId>fakeson-source-products-adapter</artifactId>
+            <version>${fakeson.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
