--- a/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-domain/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-domain/pom.xml
@@ -8,7 +8,7 @@
 
     <parent>
         <groupId>xyz.zalaya</groupId>
-        <artifactId>fakeson-source-products</artifactId>
+        <artifactId>fakeson-source-products-api</artifactId>
         <version>${fakeson.version}</version>
     </parent>
 
