feat(archetype): add the archetype module, this will contain a template for the rest of the modules in the project

--- a/pom.xml
+++ b/pom.xml
@@ -20,5 +20,6 @@
     <modules>
         <module>fakeson-source</module>
         <module>fakeson-scripts</module>
+        <module>fakeson-archetype</module>
     </modules>
 </project>
