--- a/fakeson-source/fakeson-source-products/fakeson-source-products-api/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-api/pom.xml
@@ -21,4 +21,12 @@
         <module>fakeson-source-products-api-domain</module>
         <module>fakeson-source-products-api-infrastructure</module>
     </modules>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+        </dependency>
+    </dependencies>
 </project>
