feat(mappers): add a mapper between the domain and the jpa entity model of the product

--- a/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-application/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-application/pom.xml
@@ -13,4 +13,17 @@
     </parent>
 
     <artifactId>fakeson-source-products-api-application</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>xyz.zalaya</groupId>
+            <artifactId>fakeson-source-products-api-domain</artifactId>
+            <version>${fakeson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.zalaya</groupId>
+            <artifactId>fakeson-source-products-api-infrastructure</artifactId>
+            <version>${fakeson.version}</version>
+        </dependency>
+    </dependencies>
 </project>
