--- a/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-infrastructure/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-infrastructure/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
     </dependencies>
 </project>
