feat(controller): add the endpoints to interact with the api

--- a/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-infrastructure/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-infrastructure/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot.version}</version>
         </dependency>
+        <dependency>
+            <groupId>xyz.zalaya</groupId>
+            <artifactId>fakeson-source-products-api-domain</artifactId>
+            <version>${fakeson.version}</version>
+        </dependency>
     </dependencies>
 </project>
