--- a/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-infrastructure/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-api/fakeson-source-products-api-infrastructure/pom.xml
@@ -21,6 +21,11 @@
             <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>${spring-boot.version}</version>
