--- a/fakeson-source/fakeson-source-users/fakeson-source-users-infrastructure/pom.xml
+++ b/fakeson-source/fakeson-source-users/fakeson-source-users-infrastructure/pom.xml
@@ -13,4 +13,27 @@
     </parent>
 
     <artifactId>fakeson-source-users-infrastructure</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>xyz.zalaya</groupId>
+            <artifactId>fakeson-source-users-domain</artifactId>
+            <version>${fakeson.version}</version>
+        </dependency>
+    </dependencies>
 </project>
