feat(structure): implement new adapters for jpa and upgrade a lot the architecture

--- a/fakeson-source/fakeson-source-products/fakeson-source-products-infrastructure/pom.xml
+++ b/fakeson-source/fakeson-source-products/fakeson-source-products-infrastructure/pom.xml
@@ -35,5 +35,10 @@
             <artifactId>fakeson-source-products-domain</artifactId>
             <version>${fakeson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>xyz.zalaya</groupId>
+            <artifactId>fakeson-source-products-application</artifactId>
+            <version>${fakeson.version}</version>
+        </dependency>
     </dependencies>
 </project>
