--- a/fakeson-source/fakeson-source-products/pom.xml
+++ b/fakeson-source/fakeson-source-products/pom.xml
@@ -17,6 +17,7 @@
 
     <modules>
         <module>fakeson-source-products-domain</module>
+        <module>fakeson-source-products-adapter</module>
         <module>fakeson-source-products-infrastructure</module>
         <module>fakeson-source-products-application</module>
     </modules>
